        require at least version 0.16 of Net::Pcap in SPEC
        web.pm still refers to parse_auth_conf
          (http://www.packetfence.org/mantis/view.php?id=365)
        reg scans and issues in trigger.pm
          (http://www.packetfence.org/mantis/view.php?id=367)
        reg scans and issues in release.cgi
          (http://www.packetfence.org/mantis/view.php?id=366)


1.7.2
        added RHEL5 to supported operating systems
        stopped to distribute jpgraph with PF; the installer
          will now download jpgraph
        `pfcmd service pf status` now indicates 
          - if service should be started according to 
            configuration file
          - all pids (in case several processus are running)
        clean PID files in /usr/local/pf/var when necessary
          after service stop
        unified pfcmd service and pfcmd control
        replaced bin/pfwatcher with pfcmd service pf watch
        added trapping.redirlocal parameter which is used by 
          bin/ip2interface.pl
        removed conf/ssl/server.crt and conf/ssl/server.key from
          distribution and added code to generate them to installer.pl
        added DHCP fingerprint update to configurator.pl
        configurator.pl reference to registration.authentication
          (http://www.packetfence.org/mantis/view.php?id=342)
        port 162 is opened on internal interface instead of management 
          interface
          (http://www.packetfence.org/mantis/view.php?id=344)
        removed configurator.pl reference to arp.listendevice
        perl-IPTables-IPv4 conflicts with PacketFence RPM
          (http://www.packetfence.org/mantis/view.php?id=348)
        added authorizedips variable to each interface to customize 
          IPTables rules
          (http://www.packetfence.org/mantis/view.php?id=345)
        representation of adjustswitchportvlan reasons in web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=343)