@@ -8,6 +8,7 @@
 [default]
 communityRead = public
 communityWrite = private
+communityTrap = public
 version = 1
 vlans = 1,2,3,4
 normalVlan = 1
