@@ -8,6 +8,8 @@
           (http://www.packetfence.org/mantis/view.php?id=367)
         reg scans and issues in release.cgi
           (http://www.packetfence.org/mantis/view.php?id=366)
+        add trap community configuration parameter
+          (http://www.packetfence.org/mantis/view.php?id=368)
 
 
 1.7.2
